# OOP

./: README.md
oop_l3/: Array.cpp  Array.h  Figure.h  Pentagon.cpp  Pentagon.h  README.md  Rhombus.cpp  Rhombus.h  Trapezoid.cpp  Trapezoid.h  main.cpp  tests.cpp
oop_l4/: Array.h  CMakeLists.txt  Figure.h  Functions.h  Pentagon.h  Rhombus.h  Trapezoid.h  main.cpp  tests.cpp
oop_l5/: CMakeLists.txt  allocator.h  list.h  main.cpp
oop_l6/: CMakeLists.txt  elf.cpp  elf.h  factory.h  main.cpp  npc.h  outlaw.cpp  squirrel.cpp  squirrel.h  tests.cpp  visitor.h
oop_l7/: CMakeLists.txt  README.md  elf.cpp  elf.h  main.cpp  npc.h  outlaw.cpp  outlaw.h  squirrel.cpp  squirrel.h  tests.cpp
